# SPO

./: CMakeLists.txt
src/: readme.md
src/child/: buffer.txt  child.cpp
src/parent/: parent.cpp
