cmake_minimum_required(VERSION 3.0.0)
project(labSPO1 VERSION 0.1.0)

include(CTest)
enable_testing()


set(SRC_C src/child)
set(SRC_P src/parent)
set(CHILD_SOURCES ${SRC_C}/child.cpp)
set(PARENT_SOURCES ${SRC_P}/parent.cpp)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})

ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

add_executable(AAparent ${PARENT_SOURCES})
add_executable(AAchild  ${CHILD_SOURCES})

TARGET_LINK_LIBRARIES(AAchild ${GTK3_LIBRARIES})

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
